--- a/services.html
+++ b/services.html
@@ -208,7 +208,7 @@
                             </div>
                             <p>Amlica Recruitment is more than just a staffing agency;
                                  they are a partner invested in your satisfaction.</p>
-                            <a href="about.html" class="border-btn">Make an Appointment</a>
+                            <a href="contact.html" class="border-btn">Make an Appointment</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
