--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                         <div class="col-xl-7 col-lg-8 col-md-10 ">
                          <div class="hero-wrapper">
                             <!-- Video icon -->
-                            <div class="video-icon">
+                            <!-- <div class="video-icon">
                                 <a class="popup-video btn-icon" href="#" data-animation="bounceIn" data-delay=".4s">
                                     <i class="fas fa-play"></i>
                                 </a>
-                            </div>
+                            </div> -->
                             <div class="hero__caption">
                                 <h1 data-animation="fadeInUp" data-delay=".3s">WHO WE ARE</h1>
                                 <p data-animation="fadeInUp" data-delay=".6s">Amlica Recruitment is the most
