--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
                 <div class="row align-items-center">
                     <!-- Logo -->
                     <div class="col-xl-2 col-lg-2 col-md-1">
-                        <!-- <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                        </div> -->
+                        <div class="logo">
+                            <a href="index.html"><img src="assets/img/logo/logoA.png" alt=""></a>
+                        </div>
                     </div>
                     <div class="col-xl-10 col-lg-10 col-md-10">
                         <div class="menu-main d-flex align-items-center justify-content-end">
