--- a/contact.html
+++ b/contact.html
@@ -89,28 +89,29 @@
                 <h2 class="contact-title">Get in Touch</h2>
             </div>
             <div class="col-lg-8">
-                <form class="form-contact contact_form" method="POST" action="https://formspree.io/f/xzblqnrn"  id="contactForm">
+                <form class="form-contact contact_form" method="POST" action="https://formspree.io/f/xzblqnrn"  >
                     <div class="row">
                         <div class="col-12">
                             <div class="form-group">
-                                <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"  placeholder=" Enter Message"></textarea>
+                                <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"  placeholder=" Enter Message" required></textarea>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <input class="form-control valid" name="name" id="name" type="text"  placeholder="Enter your name">
+                                <input class="form-control valid" name="name" id="name" type="text"  placeholder="Enter your name" required>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <input class="form-control valid" name="email" id="email" type="email"  placeholder="Email">
+                                <input class="form-control valid" name="email" id="email" type="email"  placeholder="Email" required>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-group">
-                                <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject">
+                                <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject" required>
                             </div>
                         </div>
+                  
                     </div>
                     <div class="form-group mt-3">
                         <button type="submit" class="button button-contactForm boxed-btn">Send</button>
@@ -184,7 +185,7 @@
                         <div class="single-footer-caption mb-50">
                             <!-- logo -->
                             <div class="footer-logo mb-25">
-                                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/logoA.png" alt=""></a>
                             </div>
                             <d iv class="header-area">
                                 <div class="main-header main-header2">
@@ -207,7 +208,7 @@
                             <!-- social -->
                             <div class="footer-social mt-50">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-pinterest-p"></i></a>
                             </div>
                         </div>
@@ -240,9 +241,8 @@
                     <div class="row">
                         <div class="col-xl-10 ">
                             <div class="footer-copy-right">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target="_blank">rotichk254@gmail.com</a>
-                                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                                <p>
+                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
                               </div>
                           </div>
                       </div>
