--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                                         </ul>
                                     </nav>
                                 </div>
-                                <div class="header-right-btn f-right d-none d-lg-block ml-15">
+                                <!-- <div class="header-right-btn f-right d-none d-lg-block ml-15">
                                     <a href="contact.html" class="btn header-btn">Make an Appointment</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>   
                         <!-- Mobile Menu -->
@@ -107,7 +107,7 @@
                                     <!-- <h2 data-animation="fadeInUp" data-delay=".3s">Health is wealth  keep it healthy </h2> -->
                                     <p data-animation="fadeInUp" data-delay=".6s">Customer Service  is our Priority, 
                                         We pride ourselves on High Quality Customer Service For our Clients and Candidates</p>
-                                    <a href="services.html" class="btn" data-animation="fadeInLeft" data-delay=".3s">Take a Service</a>
+                                    <!-- <a href="services.html" class="btn" data-animation="fadeInLeft" data-delay=".3s">Take a Service</a> -->
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                                       Our clients entrust our candidates with patients dealing with injury or illness. 
                                       We are committed to meeting all your health needs and go above and beyond
                                        to ensure you receive the best available care.</p>
-                                <a href="#" class="btn" data-animation="fadeInLeft" data-delay=".3s">Take a Service</a>
+                                <!-- <a href="#" class="btn" data-animation="fadeInLeft" data-delay=".3s">Take a Service</a> -->
                             </div>
                         </div>
                     </div>
@@ -188,9 +188,9 @@
                         <!-- <p>Almost before we knew it, we<br> had left the ground</p> -->
                     </div>
                 </div>
-                <div class="col-xl-2 col-lg-3 col-md-4">
+                <!-- <div class="col-xl-2 col-lg-3 col-md-4">
                     <a href="services.html" class="btn f-right sm-left">Take a Service</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -202,7 +202,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-cat text-center mb-50">
                     <div class="cat-icon">
-                        <img src="assets/img/icon/services1.svg" alt="">
+                        <img src="assets/img/icon/iconH.svg" alt="">
                     </div>
                     <div class="cat-cap">
                         <h5><a href="services.html">Health Care</a></h5>
@@ -229,7 +229,7 @@
                              of a healthy and happy lifestyle. Our dedicated team of domestic
                               cleaners is committed to thorough and efficient general cleaning.
                                From dusting and vacuuming to sweeping and mopping, we cover every
-                                corner to ensure your home is spotless.
+                                corner to ensure your home is spotless. <br> <br>
                         </p>
                         <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
                     </div>
@@ -247,7 +247,7 @@
                              of cleanliness and tranquility. Our dedicated team offers
                               comprehensive services, from kitchen brilliance to  bathroom care.
                                With eco-friendly practices, trustworthiness, and flexible scheduling,
-                                we tailor our approach to our cunique needs. 
+                                we tailor our approach to our cunique needs. <br><br>
                         </p>
                         <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
                     </div>
@@ -318,7 +318,7 @@
                                     reliable healthcare and domestic staff.
                                      Their attention to detail and personalized approach set them apart. 
                                      The candidates we hired through them have become invaluable members of our household.
-                                      Thank you, Amlica."
+                                      Thank you, Amlica." 
                                 </p>
                             </div>
                             <!-- founder -->
@@ -450,7 +450,7 @@
                             Amlica Recruitment is more than just a staffing agency; 
                             they are a partner invested in your satisfaction. 
                         </p>
-                        <a href="contact.html" class="border-btn">Make an Appointment</a>
+                        <!-- <a href="contact.html" class="border-btn">Make an Appointment</a> -->
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
@@ -476,7 +476,7 @@
                         <div class="single-footer-caption mb-50">
                             <!-- logo -->
                             <div class="footer-logo mb-25">
-                                <!-- <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a> -->
+                                <a href="index.html"><img src="assets/img/logo/logoA.png" alt=""></a>
                             </div>
                             <div class="header-area">
                                 <div class="main-header main-header2">
@@ -499,7 +499,7 @@
                             <!-- social -->
                             <div class="footer-social mt-50">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-pinterest-p"></i></a>
                             </div>
                         </div>
@@ -512,7 +512,12 @@
                                     <div class="media-body">
                                         <h3><a href="https://wa.me/+447823656744">+44 7823 656744</a></h3>
                                         <h3> <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h3>
-                                        
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <div class="footer-logo mb-25">
+                                        <a href="index.html"><img src="assets/img/logo/logoA.png" alt=""></a>
                                     </div>
                                   
                                     <div class="footer-tittle">
@@ -533,8 +538,7 @@
                         <div class="col-xl-10 ">
                             <div class="footer-copy-right">
                              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target="_blank">rotichk254@gmail.com</a>
-                              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
                           </div>
                       </div>
                   </div>
