next to final changes

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                                             <li><a href="#">AMLICA RECRUITMENT</a></li>
                                             <li><a href="index.html">Home</a></li>
                                             <!-- <li><a href="about.html">About</a></li> -->
-                                            <li><a href="services.html">Services</a></li>
-                                            <!-- <li><a href="blog.html">Blog</a>
+                                            <!-- <li><a href="services.html">Services</a></li> -->
+                                            <li><a href="#">Services</a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog_details.html">Blog Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
+                                                    <li><a href="client.html">clients</a></li>
+                                                    <li><a href="jobseekers.html">jobseekers</a></li>
+                                                    <!-- <li><a href="elements.html">Element</a></li> -->
                                                 </ul>
-                                            </li> -->
+                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -253,6 +253,51 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-cat text-center mb-50">
+                    <div class="cat-icon">
+                        <!-- <img src="assets/img/icon/housekeeping (2).svg" alt=""> -->
+                    </div>
+                    <div class="cat-cap">
+                        <h5><a href="services.html">Health Care training</a></h5>
+                        <p>We offer a range of online and practical training courses designed for healthcare assistants and support workers. 
+                            Reach out to us to access free online training, and enroll in our paid mandatory courses valid for a one-year period. <br> <br></p>
+                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-cat text-center mb-50">
+                    <div class="cat-icon">
+                        <!-- <img src="assets/img/icon/housekeeping (2).svg" alt=""> -->
+                    </div>
+                    <div class="cat-cap">
+                        <h5><a href="services.html">Resume Review</a></h5>
+                        <p>Our team analyses your CV, offering expert recommendations
+                            to showcase your expertise to ensure your CV stands out. 
+                            For candidates  without a CV, we create one tailored to your strengths and experience.
+                           <br>
+                           <br>
+
+                       </p>
+                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-cat text-center mb-50">
+                    <div class="cat-icon">
+                        <!-- <img src="assets/img/icon/housekeeping (2).svg" alt="">
+                    </div> -->
+                    <div class="cat-cap">
+                        <h5><a href="services.html">Disclosure and Barring Service ( DBS )</a></h5>
+                        <p>In order to ensure compliance, we ask for an enhanced and Updated DBS check. 
+                            Obtain a complimentary check and submit your application for a 
+                            DBS with us to receive a copy of your criminal record for a fee.</p>
+                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -381,7 +426,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-7 col-md-9 col-sm-10">
                 <div class="section-tittle text-center mb-100">
-                    <h2>Elderly care homes</h2>
+                    <h2>Elderly care</h2>
                 </div>
             </div>
         </div>
@@ -498,9 +543,9 @@
                             </div>
                             <!-- social -->
                             <div class="footer-social mt-50">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class='bx bxs-phone-call' ></i></a>
+                                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+                                <a href="#"><i class='bx bx-envelope' ></i></a>
                             </div>
                         </div>
                     </div>
@@ -510,8 +555,10 @@
                                         <h1>Contact Us Now!</h1>
                                     </div>
                                     <div class="media-body">
-                                        <h3><a href="https://wa.me/+447823656744">+44 7823 656744</a></h3>
-                                        <h3> <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h3>
+                                        <h3>Call:  <a href="tel:02035764814">02035764814</a></h3>
+                                        <h3>WhatsApp: <a href="https://wa.me/+447823656744">+44 7823 656744</a></h3>
+                                        <h3>Email: <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h3>
+                                        
                                     </div>
                                     <br>
                                     <br>
