--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <!--? Preloader Start -->
 <div id="preloader-active">
@@ -128,7 +129,14 @@
                     </div>
                 </div>
                 <div class="media contact-info">
-                    <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+                    <span class="contact-info__icon"><i class='bx bx-phone-call' ></i></span>
+                    <div class="media-body">
+                        <h3><a href="tel:02035764814">02035764814</a></h3>
+                        <p>Mon to Fri 9am to 6pm</p>
+                    </div>
+                </div>
+                <div class="media contact-info">
+                    <span class="contact-info__icon"><i class='bx bxl-whatsapp' ></i></span>
                     <div class="media-body">
                         <h3><a href="https://wa.me/447823656744" target="_blank">+44 7823 656744</a></h3>
                         <p>Mon to Fri 9am to 6pm</p>
@@ -216,12 +224,13 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                         <div class="single-footer-caption">
                             <div class="footer-tittle mb-50">
-                                <h2>Contact Us Now!</h2>
+                                <h1>Contact Us Now!</h1>
                             </div>
                             <div class="media-body">
-                                <h4>+44 7823 656744</h4>
-                                <h4>amlica24seven@gmail.com</h4>
-                                
+                                <h5>Call:  <a href="tel:02035764814">02035764814</a></h5>
+                                <h5>WhatsApp: <a href="https://wa.me/+447823656744">+44 7823 656744</a></h5>
+                                <h5>Email: <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h5>
+
                             </div>
                           
                             <div class="footer-tittle">
