--- a/contact.html
+++ b/contact.html
@@ -215,9 +215,9 @@
                             </d>
                             <!-- social -->
                             <div class="footer-social mt-50">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="https://wa.me/+447823656744"><i class="fab fa-whatsapp"></i></a>
+                                <a href="tel:02035764814"><i class='bx bxs-phone-call' ></i></a>
+                                <a href="mailto:amlica24seven@gmail.com"><i class='bx bxl-gmail' ></i></a>
                             </div>
                         </div>
                     </div>
