--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- ? Preloader Start -->
@@ -543,9 +544,9 @@
                             </div>
                             <!-- social -->
                             <div class="footer-social mt-50">
-                                <a href="#"><i class='bx bxs-phone-call' ></i></a>
-                                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
-                                <a href="#"><i class='bx bx-envelope' ></i></a>
+                                <a href="https://wa.me/+447823656744"><i class="fab fa-whatsapp"></i></a>
+                                <a href="tel:02035764814"><i class='bx bxs-phone-call' ></i></a>
+                                <a href="mailto:amlica24seven@gmail.com"><i class='bx bxl-gmail' ></i></a>
                             </div>
                         </div>
                     </div>
