--- a/jobseekers.html
+++ b/jobseekers.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- ? Preloader Start -->
@@ -241,7 +242,7 @@
                             <div class="footer-logo mb-25">
                                 <a href="index.html"><img src="assets/img/logo/logoA.png" alt=""></a>
                             </div>
-                            <d iv class="header-area">
+                            <div iv class="header-area">
                                 <div class="main-header main-header2">
                                     <div class="menu-main d-flex align-items-center justify-content-start">
                                         <!-- Main-menu -->
@@ -258,12 +259,12 @@
                                         </div>
                                     </div>  
                                 </div>
-                            </d>
+                            </div>
                             <!-- social -->
                             <div class="footer-social mt-50">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="https://wa.me/+447823656744"><i class="fab fa-whatsapp"></i></a>
+                                <a href="tel:02035764814"><i class='bx bxs-phone-call' ></i></a>
+                                <a href="mailto:amlica24seven@gmail.com"><i class='bx bxl-gmail' ></i></a>
                             </div>
                         </div>
                     </div>
