--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                              caring and compassionate professionals is committed to delivering
                               personalized care tailored to the unique needs of each client.
                         </p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                                From dusting and vacuuming to sweeping and mopping, we cover every
                                 corner to ensure your home is spotless. <br> <br>
                         </p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                                With eco-friendly practices, trustworthiness, and flexible scheduling,
                                 we tailor our approach to our cunique needs. <br><br>
                         </p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                         <h5><a href="services.html">Health Care training</a></h5>
                         <p>We offer a range of online and practical training courses designed for healthcare assistants and support workers. 
                             Reach out to us to access free online training, and enroll in our paid mandatory courses valid for a one-year period. <br> <br></p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                            <br>
 
                        </p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -295,7 +295,8 @@
                         <p>In order to ensure compliance, we ask for an enhanced and Updated DBS check. 
                             Obtain a complimentary check and submit your application for a 
                             DBS with us to receive a copy of your criminal record for a fee.</p>
-                        <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a>
+                            <br> 
+                        <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
                     </div>
                 </div>
             </div>
