contact form(updated)

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <img src="assets/img/icon/housekeeping (2).svg" alt="">
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Housekeeping</a></h5>
+                        <h5><a href="#">Housekeeping</a></h5>
                         <p>
                             Amlica Housekeepers ensures your home is a sanctuary
                              of cleanliness and tranquility. Our dedicated team offers
@@ -305,7 +305,7 @@
                         <!-- <img src="assets/img/icon/housekeeping (2).svg" alt=""> -->
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Health Care training</a></h5>
+                        <h5><a href="#">Health Care training</a></h5>
                         <p>We offer a range of online and practical training courses designed for healthcare assistants and support workers. 
                             Reach out to us to access free online training, and enroll in our paid mandatory courses valid for a one-year period. <br> <br></p>
                         <!-- <a href="services.html" class="plus-btn"><i class="ti-plus"></i></a> -->
@@ -318,7 +318,7 @@
                         <!-- <img src="assets/img/icon/housekeeping (2).svg" alt=""> -->
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="services.html">Resume Review</a></h5>
+                        <h5><a href="#">Resume Review</a></h5>
                         <p>Our team analyses your CV, offering expert recommendations
                             to showcase your expertise to ensure your CV stands out. 
                             For candidates  without a CV, we create one tailored to your strengths and experience.
@@ -336,7 +336,7 @@
                         <!-- <img src="assets/img/icon/housekeeping (2).svg" alt="">
                     </div> -->
                     <div class="cat-cap">
-                        <h5><a href="services.html">Disclosure and Barring Service ( DBS )</a></h5>
+                        <h5><a href="#">Disclosure and Barring Service ( DBS )</a></h5>
                         <p>In order to ensure compliance, we ask for an enhanced and Updated DBS check. 
                             Obtain a complimentary check and submit your application for a 
                             DBS with us to receive a copy of your criminal record for a fee.</p>
@@ -485,7 +485,7 @@
                             <img src="assets/img/gallery/elderly6.jpg" alt="">
                         </div>
                         <div class="blog-cap">
-                            <h3><a href="blog_details.html">Memory Care Services</a></h3>
+                            <h3><a href="#">Memory Care Services</a></h3>
                             <P>
                                 Engaging memory-enhancing activities and programs tailored to support cognitive function
                             </P>
@@ -500,7 +500,7 @@
                             <img src="assets/img/gallery/elderly5.jpeg" alt="">
                         </div>
                         <div class="blog-cap">
-                            <h3><a href="blog_details.html">Dining and Nutrition</a></h3>
+                            <h3><a href="#">Dining and Nutrition</a></h3>
                             <P>
                                 Dining assistance for those who need help with feeding
                             </P>
@@ -515,7 +515,7 @@
                             <img src="assets/img/gallery/elderly4.jpg" alt="">
                         </div>
                         <div class="blog-cap">
-                            <h3><a href="blog_details.html">Assisted Living Services</a></h3>
+                            <h3><a href="#">Assisted Living Services</a></h3>
                             <P>
                                 Help with activities of daily living (ADLs) such as bathing, dressing, and grooming
                             </P>
@@ -579,7 +579,7 @@
                                                 <ul>
                                                     <li><a href="index.html">Home</a></li>
                                                     <!-- <li><a href="about.html">About</a></li> -->
-                                                    <li><a href="services.html">Services</a></li>
+                                                    <li><a href="#">Services</a></li>
                                                     <!-- <li><a href="blog.html">Blog</a></li> -->
                                                     <li><a href="contact.html">Contact</a></li>
                                                 </ul>
