--- a/contact.html
+++ b/contact.html
@@ -254,7 +254,7 @@
                             <div class="media-body">
                                 <h5>Call:  <a href="tel:02035764814">02035764814</a></h5>
                                 <h5>WhatsApp: <a href="https://wa.me/+447823656744">+44 7823 656744</a></h5>
-                                <h5>Email: <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h5>
+                                <h5>Email: <a href="mailto:info@amlica.co.uk">info@amlica.co.uk</a></h5>
 
                             </div>
                           
