--- a/jobseekers.html
+++ b/jobseekers.html
@@ -276,7 +276,7 @@
                             <div class="media-body">
                                 <h3>Call:  <a href="tel:02035764814">02035764814</a></h3>
                                 <h3>WhatsApp: <a href="https://wa.me/+447823656744">+44 7823 656744</a></h3>
-                                <h3>Email: <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h3>
+                                <h3>Email: <a href="mailto:info@amlica.co.uk">info@amlica.co.uk</a></h3>
                                 
                             </div>
                             <div class="footer-tittle">
