--- a/client.html
+++ b/client.html
@@ -273,7 +273,7 @@
                             <div class="footer-social mt-50">
                                 <a href="https://wa.me/+447823656744"><i class="fab fa-whatsapp"></i></a>
                                 <a href="tel:02035764814"><i class='bx bxs-phone-call' ></i></a>
-                                <a href="mailto:amlica24seven@gmail.com"><i class='bx bxl-gmail' ></i></a>
+                                <a href="mailto:info@amlica.co.uk"><i class='bx bxl-gmail' ></i></a>
                             </div>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                               <div class="media-body">
                                         <h3>Call:  <a href="tel:02035764814">02035764814</a></h3>
                                         <h3>WhatsApp: <a href="https://wa.me/+447823656744">+44 7823 656744</a></h3>
-                                        <h3>Email: <a href="mailto:amlica24seven@gmail.com">amlica24seven@gmail.com</a></h3>
+                                        <h3>Email: <a href="mailto:info@amlica.co.uk">info@amlica.co.uk</a></h3>
                                         
                                     </div>
                             <div class="footer-tittle">
