--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                                         <li><a href=""> AMLICA RECRUITMENT</a></li>
                                         <li><a href="index.html">Home</a></li>
                                         <!-- <li><a href="about.html">About</a></li> -->
-                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="#">Services</a></li>
                                         <!-- <li><a href="blog.html">Blog</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Blog</a></li>
